resolve web site

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     ----------------- -->
     <section>
         <div class="container3">
-            <h1 class="main-title">Our Colleg Department are!</h1>
+            <h1 class="main-title">Our College Department are!</h1>
     <div class="all-department">
     <div class="department">
         <h1>Civil</h1>
